--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"sickimg.jpg\" width=\"800\" height=\"200\">\n",
+    "<img src=\"sickimg.jpg\" style=\"width: 800px, height: 200px\">\n",
     "<center><font size=\"1\">Source: Adobe Stock.</font>"
    ]
   },
@@ -1297,9 +1297,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
