Debugging image issue

--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"sickimg.jpg\" style=\"width: 800px, height: 200px\">\n",
+    "<img src=\"Images/sickimg.jpg\" style=\"width: 800px, height: 200px\">\n",
     "<center><font size=\"1\">Source: Adobe Stock.</font>"
    ]
   },
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"diffeq.png\" width=\"200\" height=\"100\">\n",
+    "<img src=\"Images/diffeq.png\" width=\"200\" height=\"100\">\n",
     "<center><font size=\"2\"> General system of ordinary differential equations of the SIR model\n",
     "<center><font size=\"1\">Source: Wikipedia compartmental models in epidemiology.</font>"
    ]
@@ -118,8 +118,8 @@
    "metadata": {},
    "source": [
     "<table><tr>\n",
-    "<td> <img src=\"Infectivity.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "<td> <img src=\"Infectivity2.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "<td> <img src=\"Images/Infectivity.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "<td> <img src=\"Images/Infectivity2.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
     "</tr></table>\n",
     "<center><font size=\"2\"> Our left model is our coded infectivity function, and the right model are multiple plots of our function with random parameters. Source (1)\n"
    ]
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"Distance.PNG\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "<img src=\"Images/Distance.PNG\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
     "<center><font size=\"2\"> This is based on a Type I generalized logistic distribution from source (2)"
    ]
   },
@@ -151,8 +151,8 @@
    "metadata": {},
    "source": [
     "<table><tr>\n",
-    "<td> <img src=\"Exposure.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "<td> <img src=\"Exposure2.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "<td> <img src=\"Images/Exposure.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
+    "<td> <img src=\"Images/Exposure2.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
     "</tr></table>\n",
     "<center><font size=\"2\"> Our left model is our coded exposure function, and the right model are multiple plots of our function with random parameters.\n"
    ]
