--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -117,11 +117,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table><tr>\n",
-    "<td> <img src=\"https://i.imgur.com/F6rB6UR.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "<td> <img src=\"https://i.imgur.com/ZKL6InW.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "</tr></table>\n",
-    "<center><font size=\"2\"> Our left model is our coded infectivity function, and the right model are multiple plots of our function with random parameters. Source (1)\n"
+    "Figure 1             |  Figure 2\n",
+    ":-------------------------:|:-------------------------:\n",
+    "![](https://i.imgur.com/F6rB6UR.png)  |  ![](https://i.imgur.com/ZKL6InW.png)\n",
+    "\n",
+    "<center><font size=\"2\"> Our Figure 1 is our coded infectivity function, and Figure 2 is multiple plots of our function with random parameters. Source (1)"
    ]
   },
   {
@@ -150,11 +150,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<table><tr>\n",
-    "<td> <img src=\"https://i.imgur.com/pRbHMw2.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "<td> <img src=\"https://i.imgur.com/a6URHcJ.png\" alt=\"Drawing\" style=\"width: 500px;\"/> </td>\n",
-    "</tr></table>\n",
-    "<center><font size=\"2\"> Our left model is our coded exposure function, and the right model are multiple plots of our function with random parameters.\n"
+    "Figure 3             |  Figure 4\n",
+    ":-------------------------:|:-------------------------:\n",
+    "![](https://i.imgur.com/pRbHMw2.png)  |  ![](https://i.imgur.com/a6URHcJ.png)\n",
+    "\n",
+    "<center><font size=\"2\"> Our left model is our coded exposure function, and the right model are multiple plots of our function with random parameters."
    ]
   },
   {
